# LPI

./: README.md
2025l1g090/: README.md  Tarefa1.hs  Tarefa1Test.hs  TestesT1.hs  report.html  runcoverage.sh  runhpc.sh  t1.feedback  t2.feedback  t3.feedback  t4.feedback  worms.cabal
2025l1g090/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2025l1g090/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  worms-0.0.0.0-inplace.conf
2025l1g090/lib/: Labs2025.hs  Tarefa0_2025.hs  Tarefa0_geral.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs  Tarefa4.hs  TestesT2.hs  lib.cabal  report.html
2025l1g090/lib/2025l1g090/: README.md  worms.cabal
2025l1g090/lib/2025l1g090/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2025l1g090/lib/2025l1g090/lib/: Labs2025.hs  Tarefa0_2025.hs  Tarefa0_geral.hs  Tarefa1.hs  Tarefa2.hs  Tarefa3.hs
2025l1g090/lib/2025l1g090/test/: Magic.hs  Tarefa3Test.hs
2025l1g090/lib/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2025l1g090/test/: Magic.hs  OracleT1.hs  OracleT2.hs  OracleT3.hs  Tarefa1Test.hs  Tarefa2Test.hs  Tarefa3Test.hs  Tarefa4Test.hs
